Add basic drive endpoints